# Opencv

people-detector/: CMakeLists.txt  README.md  main.cpp
people-detector/include/: cnn.hpp  detector.hpp  utils.hpp
people-detector/src/: utils.cpp
